# Chess-Coach

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  master_prompt.md  pyproject.toml  scope.md
.streamlit/: config.toml
data/: corpus_seed.json
data/repertoires/: white.pgn
notebooks/: PHASE2_IDEAS.md
src/advisor/: classifier.py  corpus.py  critical_moments.py  llm.py  pipeline.py  retrieval.py
src/api/: game_fetcher.py  main.py
src/engine/: lichess_eval.py  stockfish.py
src/repertoire/: diff.py  parser.py  store.py
src/shared/: chess_utils.py  schemas.py  settings.py
src/ui/: streamlit_app.py
src/ui/components/: __init__.py  animated_board.py  explain_panel.py  game_walker.py  repertoire_panel.py
tests/: test_classifier.py  test_corpus.py  test_critical_moments.py  test_explain_panel.py  test_game_fetcher.py  test_game_walker.py  test_lichess_eval.py  test_llm.py  test_pipeline.py  test_repertoire_diff.py  test_repertoire_panel.py  test_repertoire_parser.py  test_repertoire_store.py  test_retrieval.py  test_smoke.py  test_stockfish.py
