[project]
name = "caissa"
version = "0.1.0"
description = "Personal chess improvement system — local Streamlit post-mortem with RAG-grounded commentary"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Alexander Spreckelsen" }]

dependencies = [
    # PDF + chess
    "pymupdf>=1.24",
    "python-chess>=1.999",
    # RAG
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    # Backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # LLM
    "anthropic>=0.39",
    # Data
    "tqdm>=4.66",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    # HTTP
    "httpx>=0.27",
    # UI
    "streamlit>=1.38",
    # Engine
    "stockfish>=3.28",
]

[project.optional-dependencies]
training = [
    "torch>=2.4",
    "transformers>=4.44",
    "peft>=0.12",
    "trl>=0.10",
    "bitsandbytes>=0.43",
    "datasets>=2.21",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
