[project]
name = "caissa"
version = "0.1.0"
description = "Personal chess improvement system — local Streamlit post-mortem with RAG-grounded commentary"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Alexander Spreckelsen" }]

dependencies = [
    # PDF + chess
    "pymupdf>=1.24",
    "python-chess>=1.999",
    # RAG
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    # Backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # LLM — OpenRouter via the OpenAI SDK (API-compatible)
    "openai>=1.50",
    # Data
    "tqdm>=4.66",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    # HTTP
    "httpx>=0.27",
    # UI
    "streamlit>=1.38",
    # Engine
    "stockfish>=3.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
# onnxruntime >=1.20 dropped Intel Mac (x86_64) wheels; cap for local dev on Intel
override-dependencies = [
    "onnxruntime<=1.19.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # torch 2.2.2 was compiled against numpy 1.x; numpy 2.x causes a crash at import
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # transformers 5.x requires torch>=2.4; cap to 4.x for compatibility with torch 2.2.2
    "transformers<5; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
